added standerd curriculam style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="nav-p1">
             <img src="assets/logo.png" alt="">
-            <h3>SCHOOL</h3>
+            <h3 class="school">SCHOOL</h3>
         </div>
         <div class="nav-p2">
             <p id="Home">Home</p>
@@ -28,7 +28,7 @@
                 <h1 class="first"><p><span class="pera-1">Empowering </span>
                     <span class="pera-2">students from small age</span> <span class="pera-3">towards vision</span></p></h1>
                 <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
-                <button>Enroll Now</button>
+                <button class="button">Enroll Now</button>
 
             </div>
             <div>
@@ -37,7 +37,7 @@
             </div>
         </div>
 <!-- second layout -->
-                 <div class="full-second">
+        <div class="full-second">
                     
                     <h1 id="Standard">Standard Curriculum</h1>
             <section class="second">
@@ -48,7 +48,7 @@
                     <p class="p-1">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                        <button>Read More</button>
+                        <button class="button-1">Read More</button>
 
                 </div>
                 <div class="Kinder-2">
@@ -57,7 +57,7 @@
                     <p class="p-1">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                        <button>Read More</button>
+                        <button class="button-2">Read More</button>
 
                 </div>
                 <div class="Kinder-3">
@@ -66,11 +66,11 @@
                     <p class="p-1">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                        <button>Read More</button>
+                        <button class="button-3">Read More</button>
 
                 </div>
             </section>
-                 </div>
+         </div>
     </main>
     <footer>
 
