added standerd curriculam style and media screen

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="button">Enroll Now</button>
 
             </div>
-            <div>
+            <div class="img-1">
                 <img src="assets/hero-kids.png" alt="">
 
             </div>
