--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                        <div class="pat3-img">
                            <img src="assets/story-1.png" alt="">
                        </div>
-                       <div>
+                       <div id="time-1">
+                            <p >November 19, 2019</p>
+                        </div>
+                       <div class="just">
                            <h2>A fun toddler coloring training on
                                classroom</h2>
                            <p>Beautiful branding for changes by Never Now in Australia.
@@ -97,21 +100,33 @@
                    <div class="part3-4-img">
                        <div>
                            <img src="assets/story-2.png" alt="">
+                           <div class="time-2">
+                            <p>November 19, 2019</p>
+                           </div>
                            <h2>Find out if a school fits the
                                family’s needs</h2>
                        </div>
                        <div>
                            <img src="assets/story-3.png" alt="">
+                           <div class="time-3">
+                            <p>November 19, 2019</p>
+                           </div>
                            <h2>Summer math & literacy
                                centres for kids</h2>
                        </div>
                        <div>
                            <img src="assets/story-4.png" alt="">
+                           <div class="time-2">
+                            <p>November 19, 2019</p>
+                           </div>
                            <h2>Classroom management
                                techniques for new tutors</h2>
                        </div>
                        <div>
                            <img src="assets/story-5.png" alt="">
+                           <div class="time-2">
+                            <p>November 19, 2019</p>
+                           </div>
                            <h2>Conversation rhymes
                                improve kids listening</h2>
                        </div>
