added by style for img

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Standard Curriculum</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/15ebaf796d.js" crossorigin="anonymous"></script>
 </head>
 <body class="all">
     <nav class="navbar">
@@ -99,7 +100,7 @@
                    </div>
                    <div class="part3-4-img">
                        <div>
-                           <img src="assets/story-2.png" alt="">
+                           <img class="img-11" src="assets/story-2.png" alt="">
                            <div class="time-2">
                             <p>November 19, 2019</p>
                            </div>
@@ -107,7 +108,7 @@
                                family’s needs</h2>
                        </div>
                        <div>
-                           <img src="assets/story-3.png" alt="">
+                           <img class="img-11" src="assets/story-3.png" alt="">
                            <div class="time-3">
                             <p>November 19, 2019</p>
                            </div>
@@ -115,7 +116,7 @@
                                centres for kids</h2>
                        </div>
                        <div>
-                           <img src="assets/story-4.png" alt="">
+                           <img class="img-11" src="assets/story-4.png" alt="">
                            <div class="time-2">
                             <p>November 19, 2019</p>
                            </div>
@@ -123,7 +124,7 @@
                                techniques for new tutors</h2>
                        </div>
                        <div>
-                           <img src="assets/story-5.png" alt="">
+                           <img class="img-11" src="assets/story-5.png" alt="">
                            <div class="time-2">
                             <p>November 19, 2019</p>
                            </div>
